...
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="5dp"
        android:textSize="20sp"
        android:text="@string/time_label"
        android:labelFor="@id/time_value"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/time_value"
        app:layout_constraintTop_toBottomOf="@id/pass_name"/>

    <EditText
        android:id="@+id/time_value"
...
        android:text="@string/minutes"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBaseline_toBaselineOf="@id/time_value"
        app:layout_constraintStart_toEndOf="@id/time_value"/>

    <Button
        android:id="@+id/add_route_pass_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/add_mountain_pass"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
...
