...
    <string name="last_routes">Ostatnie trasy</string>
    <string name="add_route">Dodaj trasę</string>
    <string name="add_mountain_pass">Dodaj odcinek</string>
    <string name="add_new_mountain_pass">Dodaj odcinek</string>
    <string name="own_mountain_pass">Wybierz własny</string>
    <string name="official_mountain_pass">Wybierz ze spisu</string>
    <string name="add_proof">Dodaj dowód</string>
    <string name="adding_passes_end">Zakończ dodawanie odcinków</string>
    <string name="mountain_passes_list">Spis odcinków</string>

    <string name="details">Szczegóły</string>
    <string name="start">Początek:</string>
    <string name="end">Koniec:</string>
...

    <string name="edit_points">Edytuj punkty</string>
    <string name="edit_name">Edytuj nazwę</string>
    <string name="edit_official_point">Edytuj punkt</string>

    <string name="none">-</string>
    <string name="no_capitalized">NIE</string>
    <string name="yes_capitalized">TAK</string>
    <string name="yes">Tak</string>
    <string name="no">Nie</string>
    <string name="active">aktywny</string>
    <string name="removed">zlikwidowany</string>
    <string name="confirmed">zatwierdzona</string>
    <string name="rejected">odrzucona</string>
    <string name="waiting_for_confirmation">oczekuje na potwierdzenie</string>
    <string name="waiting_to_be_sent">oczekuje na wysłanie</string>

    <string name="alert">Uwaga</string>
    <string name="status_change_message">Czy na pewno chcesz zmienić status odcinka?</string>
    <string name="back">Cofnij</string>
    <string name="ok">OK</string>

    <string name="negative_points_message">Liczba punktów nie może być mniejsza od zera</string>
    <string name="too_many_points_message">Liczba punktów nie może być większa niż 100</string>
    <string name="mountain_range_error_message">Nie ma takiego pasma górskiego</string>
    <string name="confirm_cancel_message">Czy na pewno chcesz anulować?</string>
    <string name="no_point_set_message">Odcinek musi mieć punkt początkowy i końcowy</string>
...
    <string name="save_route">Zapisz trasę</string>
    <string name="points_sum">Suma punktów:</string>

    <string name="pick_proof_image">Wybierz obraz dowodu</string>
    <string name="image_not_selected">Nie udało się wybrać obrazu</string>
    <string name="delete">Usuń</string>
    <string name="edit_proofs">Edytuj dowody</string>
    <string name="send_to_leader">Wyślij do potwierdzenia</string>
    <string name="see_proofs">Zobacz dowody</string>
    <string name="delete_proofs">Usuń dowód</string>
    <string name="add_image">Dodaj zdjęcie</string>
    <string name="add_leader">Dodaj dane przodownika</string>
    <string name="id_no">Numer legitymacji:</string>
    <string name="id_no_undecorated">Numer legitymacji</string>
    <string name="leader">Przodownik:</string>
    <string name="leader_undecorated">Przodownik</string>
    <string name="name_and_surname">Imię i nazwisko:</string>
    <string name="include_image">Załącz obraz</string>
    <string name="choose_image">Wybierz obraz</string>
    <string name="mountain_passes">Odcinki</string>
    <string name="mountain_passes_decorated">Odcinki:</string>
    <string name="close">Zamknij</string>
    <string name="leader_already_added_message">Dla tej trasy załączono już dane przodownika</string>
    <string name="leader_not_found_message">Nie znaleziono przodownika o takim numerze legitymacji</string>
    <string name="no_proofs_message">Dla tej trasy nie załączono dowodu</string>
    <string name="no_proof_selected_message">Wybierz dowód do usunięcia</string>
    <string name="confirm_delete_message">Czy na pewno chcesz usunąć dowód?</string>
    <string name="not_send">oczekuje na wysłanie</string>
...
